--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.13.0
-pycaret==2.3.10
-scikit-learn==1.2.0
+pycaret
+scikit-learn
 pandas-profiling==3.4.0
 streamlit-pandas-profiling==0.1.3
