--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.13.0
+streamlit
 pycaret
 scikit-learn
-pandas-profiling==3.4.0
-streamlit-pandas-profiling==0.1.3
+pandas-profiling
+streamlit-pandas-profiling
